[package]
name = "ld45"
version = "0.1.0"
authors = ["Martin Vilcans <martin@librador.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
#cgmath = "0.17.0"
bincode = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
